--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Homework</title>
+	<title>Homework 4 + mobile</title>
 	<link rel="stylesheet" type="text/css" href="./style.css">
+	<link rel="stylesheet" type="text/css" href="./mobile.css">
 </head>
 <body>
 <div class="main">
@@ -11,12 +12,7 @@
 		<p>Project name</p>
 		<div>
 		<ul>
-			<li><a href="./home.html">Home</a></li>
-			<li><a href="./projects.html">Projects</a></li>
-			<li><a href="./services.html">Services</a></li>
-			<li><a href="./downloads.html">Downloads</a></li>
-			<li><a href="./about.html">About</a></li>
-			<li><a href="./contact.html">Contact</a></li>
+			<li><a href="./home.html">Home</a></li><li><a href="./projects.html">Projects</a></li><li><a href="./services.html">Services</a></li><li><a href="./downloads.html">Downloads</a></li><li><a href="./about.html">About</a></li><li><a href="./contact.html">Contact</a></li>
 		</ul>
 		</div>
 	</div>
@@ -29,7 +25,7 @@
 		</div>
 
 		<div class="subheading">
-			<div class="sub1">
+			<div class="sub">
 				<h2>Safari bug warning!</h2>
 				<p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua.</span>
@@ -40,9 +36,9 @@
 				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				<button class="subbutton">View details >></button>
+				<button>View details >></button>
 			</div>
-			<div class="sub2">
+			<div class="sub">
 				<h2>Heading</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -50,9 +46,9 @@
 				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				<button class="subbutton">View details >></button>
+				<button>View details >></button>
 			</div>
-			<div class="sub3">
+			<div class="sub">
 				<h2>Heading</h2>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -60,13 +56,11 @@
 				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				<button class="subbutton">View details >></button>
+				<button>View details >></button>
 			</div>
 		</div>
 	</div>
-	<br/>
 	<hr/>
-	<br/>
 	<div class="footer">
 		© 2016 Company. Inc.
 	</div>
