--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				<button>View details >></button>
+				<button>View detail >></button>
 			</div>
 			<div class="sub">
 				<h2>Heading</h2>
@@ -46,7 +46,7 @@
 				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				<button>View details >></button>
+				<button>View detail >></button>
 			</div>
 			<div class="sub">
 				<h2>Heading</h2>
@@ -56,7 +56,7 @@
 				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				<button>View details >></button>
+				<button>View detail >></button>
 			</div>
 		</div>
 	</div>
